--- a/desktop.css
+++ b/desktop.css
@@ -106,7 +106,7 @@ html, body {
     border-bottom-right-radius: 7px;
 }
 
-img {
+.main-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
