--- a/mobile.css
+++ b/mobile.css
@@ -38,6 +38,7 @@ body {
     margin: 5%;
     background-color: var(--card-background);
     border-radius: 7px;
+    max-width: 500px;
 }
 
 .info-div {
